--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=0">
     <title>KOHLER LuxStone</title>
+    <link rel="stylesheet" type="text/css" href="../uikit-3/css/uikit.min.css">
     <link rel="stylesheet" href="../src/styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+
   </head>
 
   <body class="page">
+    <script
+      type="text/javascript" 
+      src="../uikit-3/js/uikit.min.js">
+    </script>
+				
     <script
       type="text/javascript"
       src="../src/scripts/menu.js"
@@ -27,6 +35,12 @@
     <script
       type="text/javascript"
       src="../src/scripts/form.js"
+      defer
+    >
+    </script>
+    <script
+      type="text/javascript"
+      src="../src/scripts/slide.js"
       defer
     >
     </script>
@@ -136,7 +150,7 @@
           </div>
           <div class="services__cards--big">
             <div class="services__card">
-              <img class="services__card--img" src="../src/images/section/Our-services-1.svg">
+              <img class="services__card--img" src="../src/images/section/left.png">
               <div class="services__card--title">Convert the Tub to Your 
                 <br>New Walk-in Shower</div>
               <div class="services__card--text">Say goodbye to the hassle of getting in and out of your high-threshold bathtub. And in just 1 day, say hello to the ease of mobility your new Kohler LuxStone walk-in shower brings.
@@ -150,7 +164,7 @@
             </div>
 
             <div class="services__card">
-              <img class="services__card--img" src="../src/images/section/Our-services-2.svg">
+              <img class="services__card--img" src="../src/images/section/right.png">
               <div class="services__card--title">Modernize Your Shower</div>
               <div class="services__card--text dsctp">Get rid of the old shower that really dates your bathroom. Start fresh with your new Kohler LuxStone walk-in shower, custom-designed to fit your space and your lifestyle.
               </div>
@@ -341,13 +355,85 @@
             Have A Look At Kohler LuxStone’s Design Options
           </div>
 
-          <div class="customer_reviews--imgs">
+          <!-- <div class="customer_reviews--imgs">
             <img src="../src/images/section/imgs_review/Image.svg" class="customer_reviews--imgs-img">
             <img src="../src/images/section/imgs_review/Image-2.svg" class="customer_reviews--imgs-img">
             <img src="../src/images/section/imgs_review/Image-3.svg" class="customer_reviews--imgs-img">
             <img src="../src/images/section/imgs_review/Image-4.svg" class="customer_reviews--imgs-img">
             <img src="../src/images/section/imgs_review/Image-5.svg" class="customer_reviews--imgs-img">
-          </div>
+          </div> -->
+          <!-- Slideshow container -->
+
+
+          <!-- Full-width images with number and caption text -->
+          <!-- <div class="mySlides fade">
+            <img src="../src/images/section/imgs_review/Image.svg" style="width:100%">
+          </div> -->
+
+          <!-- <div class="mySlides fade">
+            <img src="../src/images/section/imgs_review/Image-2.svg" style="width:100%">
+          </div> -->
+        <!-- 
+          <div class="mySlides fade">
+            <img src="../src/images/section/imgs_review/Image-3.svg" style="width:100%">
+          </div> -->
+
+          <!-- <div class="mySlides fade">
+            <img src="../src/images/section/imgs_review/Image-4.svg" style="width:100%">
+          </div> -->
+
+          <!-- <div class="mySlides fade">
+
+            <img src="../src/images/section/imgs_review/Image-5.svg" style="width:100%">
+          </div> -->
+
+          <!-- Next and previous buttons -->
+          <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br> -->
+
+        <!-- The dots/circles -->
+        <!-- <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span> 
+          <span class="dot" onclick="currentSlide(2)"></span> 
+          <span class="dot" onclick="currentSlide(3)"></span> 
+          <span class="dot" onclick="currentSlide(3)"></span> 
+          <span class="dot" onclick="currentSlide(3)"></span> 
+        </div> -->
+
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+          <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-grid">
+              <li>
+                  <div class="uk-panel">
+                      <img src="../src/images/section/imgs_review/Image.svg" width="600" height="600" alt="Слайдер">
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-panel">
+                      <img src="../src/images/section/imgs_review/Image-2.svg" width="600" height="600" alt="Слайдер">
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-panel">
+                      <img src="../src/images/section/imgs_review/Image-3.svg" width="600" height="600" alt="Слайдер">
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-panel">
+                      <img src="../src/images/section/imgs_review/Image-4.svg" width="600" height="600" alt="Слайдер">
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-panel">
+                      <img src="../src/images/section/imgs_review/Image-5.svg" width="600" height="600" alt="Слайдер">
+                  </div>
+              </li>
+          </ul>
+          <a class="uk-position-center-left uk-position-small uk-hidden-hover uk-slidenav-large" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+          <a class="uk-position-center-right uk-position-small uk-hidden-hover uk-slidenav-large" href="#" uk-slidenav-next uk-slider-item="next"></a>
+      </div>
+
 
           <div class="get_started">
             LET’S GET STARTED
@@ -362,7 +448,6 @@
       </section>
     </main>
 
-    <div class="form__conteiner">
       <div class="form-popup" id="myForm">
 
         <header class="header__form" id="myFormHeader">
@@ -581,7 +666,6 @@
           <span id="errorText"></span>
         </form>
       </div>
-    </div>
 
     <footer class="footer">
       <a href="#">
