mobile_version_+_desktop_with_tcpa

--- a/src/pages/privacy_notice.html
+++ b/src/pages/privacy_notice.html
@@ -1243,13 +1243,14 @@
         </svg><a class="Policy_name__xu9C_ Policy_link__Ze99H" target="_blank" rel="noopener noreferrer"
           href="https://help.vivaldi.com/desktop/privacy/privacy-settings/">Vivaldi</a></div>
       <h2 class="mt-5">The updates of the Privacy Notice </h2>
-      <div class="mt-4">This Privacy Notice and the relationships falling under its effect are regulated by the GDPR and
+      <div class="mt-4" id="ccpa">This Privacy Notice and the relationships falling under its effect are regulated by the GDPR and
         the privacy laws adopted in the United States, viz: Consumer Privacy Act (CCPA) and California Privacy Rights
         Act, Consumer Data Protection Act (Virginia), Protect Personal Data Privacy (Colorado), Delaware Online and
         Personal Privacy Protection. Existing laws and requirements for the processing of personal data are subject to
         change. We are honoring our obligation to keep you informed of updates to the Notice by posting the document on
         the website. To make sure you don't miss it, please check back regularly for updates</div>
-      <h2 class="mt-6" id="ccpa">California legislation</h2>
+      <span ></span>
+      <h2 class="mt-6">California legislation</h2>
       <div class="mt-4">We put here information for residents of California to provide you with more information about
         legislation and your privacy rights granted by the California Customer Privacy Act (CCPA) and California Privacy
         Rights Act.</div>
