--- a/src/pages/showerheads.html
+++ b/src/pages/showerheads.html
@@ -471,6 +471,29 @@
             <div class="label-2--text">
               Your index will help us understand whether we can provide our service in your region
             </div>
+            <div class="tcpa">
+              <input
+                type="checkbox"
+                id="tcpa"
+                name="tcpa"
+                checked 
+              />
+                  By clicking the “Submit” button, you hereby agree to the
+                <a class="tcpa_link" href="../pages/privacy_notice.html" target="_blank">
+                  Privacy Policy
+                </a> and
+                <a class="tcpa_link" href="../pages/terms.html" target="_blank">
+                  Terms [&] Conditions.
+                </a>
+                  You also hereby consent to receive marketing communications via automated telephone dialing system and/or pre-recorded calls, text messages, and/or emails from our 
+                <a class="tcpa_link" href="../pages/partners.html" target="_blank">
+                  “Premiere Partners” and marketing partners
+                </a>
+                  at the phone number, physical address and email address provided above, even if you are on any State and/or Federal Do Not Call list. Consent is not a condition of purchase and may be revoked at any time. Message and data rates may apply. 
+                <a class="tcpa_link" href="../pages/privacy_notice.html#ccpa" target="_blank">
+                  California Residents.
+                </a>
+            </div>
           </div>
           <div class="tab-button">
             <button
