--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="services__cards--big">
             <div class="services__card">
-              <img class="services__card--img" src="../src/images/section/left.png">
+              <img class="services__card--img" src="../src/images/section/left.jpg">
               <div class="services__card--title">Convert the Tub to Your 
                 <br>New Walk-in Shower</div>
               <div class="services__card--text">Say goodbye to the hassle of getting in and out of your high-threshold bathtub. And in just 1 day, say hello to the ease of mobility your new Kohler LuxStone walk-in shower brings.
@@ -623,6 +623,29 @@
             </div>
             <div class="label-2--text">
               Your index will help us understand whether we can provide our service in your region
+            </div>
+            <div class="tcpa">
+              <input
+                type="checkbox"
+                id="tcpa"
+                name="tcpa"
+                checked 
+              />
+                  By clicking the “Submit” button, you hereby agree to the
+                <a class="tcpa_link" href="../src/pages/privacy_notice.html" target="_blank">
+                  Privacy Policy
+                </a> and
+                <a class="tcpa_link" href="../src/pages/terms.html" target="_blank">
+                  Terms [&] Conditions.
+                </a>
+                  You also hereby consent to receive marketing communications via automated telephone dialing system and/or pre-recorded calls, text messages, and/or emails from our 
+                <a class="tcpa_link" href="../src/pages/partners.html" target="_blank">
+                  “Premiere Partners” and marketing partners
+                </a>
+                  at the phone number, physical address and email address provided above, even if you are on any State and/or Federal Do Not Call list. Consent is not a condition of purchase and may be revoked at any time. Message and data rates may apply. 
+                <a class="tcpa_link" href="../src/pages/privacy_notice.html#ccpa" target="_blank">
+                  California Residents.
+                </a>
             </div>
           </div>
           <div class="tab-button">
