mobile_version_+_desktop_with_tcpa

--- a/src/pages/do_not_sell.html
+++ b/src/pages/do_not_sell.html
@@ -34,18 +34,18 @@
         name="submit-to-google-sheet"
       >
         <div class="tab__form">
-          <div class="form__title">
+          <div class="form__title dns">
             Do not sell my personal information
           </div>
 
-          <div class="label-2--text">
+          <div class="label-2--text dns-text">
             Please enter your email address to help us find your record in our database.
           </div>
 
           <div class="label__title">
             Email
           </div>
-          <div class="label-2">
+          <div class="label-2 dns-label">
             <input
               placeholder="yourmail@site.com"
               name="email"
@@ -59,7 +59,7 @@
         <button
           type="submit" form="do_not_sell" 
           value="Submit"
-          class="submit-button"
+          class="submit-button dns-button"
         >
           Submit
         </button>
