mobile_version_+_desktop_with_tcpa

--- a/src/index.html
+++ b/src/index.html
@@ -209,10 +209,7 @@
                 </div>
               </div>
               <div class="lifetime__warranties--imgs">
-                <img src="../src/images/section/4.png">
-                <img src="../src/images/section/1.png">
-                <img src="../src/images/section/2.png">
-                <img src="../src/images/section/3.png">
+                <img src="../src/images/section/Frame 14.svg">
               </div>
             </div>
           </div>
@@ -382,11 +379,11 @@
         </div>
 
 
-          <div class="get_started">
+          <div class="get_started ">
             LET’S GET STARTED
           </div>
           <button
-            class="button--form big"
+            class="button--form big last"
             onclick="openForm(), on()"
           >
             Get estimate
