--- a/src/pages/bases.html
+++ b/src/pages/bases.html
@@ -161,9 +161,10 @@
         </div>
 
 
-        <div class="bases__title">
+        <div class="bases__title-last">
           Ready for getting 
-            <span class="colortext">free consultation?</span>
+            <span class="colortext">free
+            <br class="hidden-br">consultation?</span>
         </div>
 
         <div class="client_location">
