--- a/src/pages/shover_seating.html
+++ b/src/pages/shover_seating.html
@@ -167,7 +167,7 @@
         <div class="shower__walls--title">
           Ready for getting 
             <span class="colortext">free 
-              <br>consultation?</span>
+              <br class="hidden-br">consultation?</span>
         </div>
 
         <div class="client_location">
