--- a/src/pages/shower_accessories.html
+++ b/src/pages/shower_accessories.html
@@ -316,8 +316,7 @@
 
         <div class="accessories__title">
           Ready for getting 
-            <span class="colortext">free 
-              <br>consultation?</span>
+            <span class="colortext">free <br class="hidden-br">consultation?</span>
         </div>
 
         <div class="client_location">
