--- a/src/pages/shower_walls.html
+++ b/src/pages/shower_walls.html
@@ -233,7 +233,7 @@
           <img class="showers_examples--img" src="../images/shower_walls/gallery-2-1-lg.svg">
         </div>
 
-        <div class="shower__walls--title">
+        <div class="shower__walls--title last">
           Ready for getting 
             <span class="colortext">free consultation?</span>
         </div>
