--- a/src/pages/grab_bars.html
+++ b/src/pages/grab_bars.html
@@ -210,7 +210,8 @@
 
         <div class="shower__walls--title">
           Ready for getting 
-            <span class="colortext">free consultation?</span>
+            <span class="colortext">free 
+              <br class="hidden-br">consultation?</span>
         </div>
 
         <div class="client_location">
