mobile_version_+_desktop_with_tcpa

--- a/src/index.html
+++ b/src/index.html
@@ -545,7 +545,6 @@
                 placeholder="+1 (000) 000-0000"
                 oninput="this.className = ''"
                 name="phoneNumber"
-                required
               >
             </div>
             <div class="label-2--text">
@@ -583,7 +582,7 @@
                 name="tcpa"
                 checked 
               />
-                  By clicking the “Submit” button, you hereby agree to the
+                  By clicking the “Send” button, you hereby agree to the
                 <a class="tcpa_link" href="../src/pages/privacy_notice.html" target="_blank">
                   Privacy Policy
                 </a> and
