--- a/src/pages/do_not_sell.html
+++ b/src/pages/do_not_sell.html
@@ -9,8 +9,10 @@
     content="width=device-width, initial-scale=0.8, maximum-scale=1.0, user-scalable=no, height=device-height">
   <meta name="description" content="Home Shower expert">
   <meta name="keywords" content="">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
-  <link rel="stylesheet" href="../styles/blocks/terms.css">
 </head>
 
 <body>
