--- a/src/pages/terms.html
+++ b/src/pages/terms.html
@@ -6,6 +6,9 @@
   <title>Terms &amp; Conditions</title><!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE = edge"><![endif]-->
   <meta name="viewport"
     content="width=device-width, initial-scale=0.8, maximum-scale=1.0, user-scalable=no, height=device-height">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="../styles/blocks/terms.css">
 </head>
