mobile_version_+_desktop_with_tcpa

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-
   </head>
 
   <body class="page">
@@ -582,7 +580,7 @@
                 name="tcpa"
                 checked 
               />
-                  By clicking the “Send” button, you hereby agree to the
+                  By clicking the “SEND” button, you hereby agree to the
                 <a class="tcpa_link" href="../src/pages/privacy_notice.html" target="_blank">
                   Privacy Policy
                 </a> and
