--- a/src/pages/shover_seating.html
+++ b/src/pages/shover_seating.html
@@ -371,7 +371,7 @@
                 name="tcpa"
                 checked 
               />
-                  By clicking the “Submit” button, you hereby agree to the
+                  By clicking the “SEND” button, you hereby agree to the
                 <a class="tcpa_link" href="../pages/privacy_notice.html" target="_blank">
                   Privacy Policy
                 </a> and
