--- a/src/pages/grab_bars.html
+++ b/src/pages/grab_bars.html
@@ -372,10 +372,10 @@
             </div>
             <div class="label-2">
               <input
-                placeholder="+1 (000) 000-0000"
+                placeholder="(000) 000-0000"
                 oninput="this.className = ''"
                 name="phoneNumber"
-                required
+                id="phoneNumber"
               >
             </div>
             <div class="label-2--text">
