full-version_with_edits

--- a/src/pages/contact_us.html
+++ b/src/pages/contact_us.html
@@ -32,7 +32,7 @@
       <form
         id="contact_us"
         action=""
-        class="do_not_sell"
+        class="contact_us"
         name="submit-to-google-sheet"
       >
         <div class="tab__form">
@@ -101,23 +101,54 @@
         <span id="sendText"></span>
       </form>
 
-  <footer class="footer">
-    <a href="#">
-      <img src="../images/section/logo-6.svg" class="footer__img">
-    </a>
-    
-    <a href="../pages/terms.html" class="footer__link link1" target="_blank">Terms of Use</a>
-    <a href="../pages/privacy_notice.html" class="footer__link link2" target="_blank">Privacy Policy</a>
-    <a href="../pages/partners.html" class="footer__link link3" target="_blank">Premier Partners</a>
-    <a href="../pages/do_not_sell.html" class="footer__link link4" target="_blank">Do Not Sell My Personal Information</a>
-    <a href="../pages/cookie.html" class="footer__link link5" target="_blank">Cookie policy</a>
-    <a href="../pages/contact_us.html" class="footer__link link6" target="_blank">CONTACT US</a>
-
-    <div class="footer__link link7">
-      HomeShowerExpert.com © 2023. All Rights Reserved.
-    </div>
-
-  </footer>
+      <footer class="footer">
+        <a
+          href="../pages/terms.html"
+          class="footer__link link1"
+          target="_blank"
+        >
+          Terms of Use
+        </a>
+        <a
+          href="../pages/privacy_notice.html"
+          class="footer__link link2"
+          target="_blank"
+        >
+          Privacy Policy
+        </a>
+        <a
+          href="../pages/partners.html"
+          class="footer__link link3"
+          target="_blank"
+        >
+          Premier Partners
+        </a>
+        <a
+          href="../pages/do_not_sell.html"
+          class="footer__link link4"
+          target="_blank"
+        >
+          Do Not Sell My Personal Information
+        </a>
+        <a
+          href="../pages/cookie.html"
+          class="footer__link link5"
+          target="_blank"
+        >
+          Cookie policy
+        </a>
+        <a
+          href="../pages/contact_us.html"
+          class="footer__link link6"
+          target="_blank"
+        >
+          CONTACT US
+          </a>
+  
+        <div class="footer__link link7">
+          HomeShowerExpert.com © 2023. All Rights Reserved.
+        </div>
+      </footer>
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbxXXxdYbp-JYdgpPcIe18jqxC2j2_W7_5V_xoAhvVJPpLpWx-gYnF3d5ekHY4rX5YuYyg/exec'
     const form = document.forms['submit-to-google-sheet']
