--- a/src/pages/do_not_sell.html
+++ b/src/pages/do_not_sell.html
@@ -29,61 +29,92 @@
     </div>
   </header>
 
-      <form
-        id="do_not_sell"
-        action=""
-        class="form do_not_sell"
-        name="submit-to-google-sheet"
-      >
-        <div class="tab__form">
-          <div class="form__title dns">
-            Do not sell my personal information
-          </div>
+  <form
+    id="do_not_sell"
+    action=""
+    class="form do_not_sell"
+    name="submit-to-google-sheet"
+  >
+    <div class="tab__form">
+      <div class="form__title dns">
+        Do not sell my personal information
+      </div>
 
-          <div class="label-2--text dns-text">
-            Please enter your email address to help us find your record in our database.
-          </div>
+      <div class="label-2--text dns-text">
+        Please enter your email address to help us find your record in our database.
+      </div>
 
-          <div class="label__title">
-            Email
-          </div>
-          <div class="label-2 dns-label">
-            <input
-              placeholder="yourmail@site.com"
-              name="email"
-              type="email"
-              autofocus
-              required
-            >
-          </div>
-
-        </div>
-        <button
-          type="submit" form="do_not_sell" 
-          value="Submit"
-          class="submit-button dns-button"
+      <div class="label__title">
+        Email
+      </div>
+      <div class="label-2 dns-label">
+        <input
+          placeholder="yourmail@site.com"
+          name="email"
+          type="email"
+          autofocus
+          required
         >
-          Submit
-        </button>
-        <span id="sendText"></span>
-      </form>
+      </div>
+
+    </div>
+    <button
+      type="submit" form="do_not_sell" 
+      value="Submit"
+      class="submit-button dns-button"
+    >
+      Submit
+    </button>
+    <span id="sendText"></span>
+  </form>
 
   <footer class="footer">
-    <a href="#">
-      <img src="../images/section/logo-6.svg" class="footer__img">
+    <a
+      href="../pages/terms.html"
+      class="footer__link link1"
+      target="_blank"
+    >
+      Terms of Use
     </a>
-    
-    <a href="../pages/terms.html" class="footer__link link1" target="_blank">Terms of Use</a>
-    <a href="../pages/privacy_notice.html" class="footer__link link2" target="_blank">Privacy Policy</a>
-    <a href="../pages/partners.html" class="footer__link link3" target="_blank">Premier Partners</a>
-    <a href="../pages/do_not_sell.html" class="footer__link link4" target="_blank">Do Not Sell My Personal Information</a>
-    <a href="../pages/cookie.html" class="footer__link link5" target="_blank">Cookie policy</a>
-    <a href="../pages/contact_us.html" class="footer__link link6" target="_blank">CONTACT US</a>
+    <a
+      href="../pages/privacy_notice.html"
+      class="footer__link link2"
+      target="_blank"
+    >
+      Privacy Policy
+    </a>
+    <a
+      href="../pages/partners.html"
+      class="footer__link link3"
+      target="_blank"
+    >
+      Premier Partners
+    </a>
+    <a
+      href="../pages/do_not_sell.html"
+      class="footer__link link4"
+      target="_blank"
+    >
+      Do Not Sell My Personal Information
+    </a>
+    <a
+      href="../pages/cookie.html"
+      class="footer__link link5"
+      target="_blank"
+    >
+      Cookie policy
+    </a>
+    <a
+      href="../pages/contact_us.html"
+      class="footer__link link6"
+      target="_blank"
+    >
+      CONTACT US
+      </a>
 
     <div class="footer__link link7">
       HomeShowerExpert.com © 2023. All Rights Reserved.
     </div>
-
   </footer>
 
   <script>
