--- a/src/pages/terms.html
+++ b/src/pages/terms.html
@@ -321,15 +321,49 @@
   </div>
 
   <footer class="footer">
-    <a href="#">
-      <img src="../images/section/logo-6.svg" class="footer__img">
+    <a
+      href="../pages/terms.html"
+      class="footer__link link1"
+      target="_blank"
+    >
+      Terms of Use
     </a>
-    <a href="../pages/terms.html" class="footer__link link1" target="_blank">Terms of Use</a>
-    <a href="../pages/privacy_notice.html" class="footer__link link2" target="_blank">Privacy Policy</a>
-    <a href="../pages/partners.html" class="footer__link link3" target="_blank">Premier Partners</a>
-    <a href="../pages/do_not_sell.html" class="footer__link link4" target="_blank">Do Not Sell My Personal Information</a>
-    <a href="../pages/cookie.html" class="footer__link link5" target="_blank">Cookie policy</a>
-    <a href="../pages/contact_us.html" class="footer__link link6" target="_blank">CONTACT US</a>
+    <a
+      href="../pages/privacy_notice.html"
+      class="footer__link link2"
+      target="_blank"
+    >
+      Privacy Policy
+    </a>
+    <a
+      href="../pages/partners.html"
+      class="footer__link link3"
+      target="_blank"
+    >
+      Premier Partners
+    </a>
+    <a
+      href="../pages/do_not_sell.html"
+      class="footer__link link4"
+      target="_blank"
+    >
+      Do Not Sell My Personal Information
+    </a>
+    <a
+      href="../pages/cookie.html"
+      class="footer__link link5"
+      target="_blank"
+    >
+      Cookie policy
+    </a>
+    <a
+      href="../pages/contact_us.html"
+      class="footer__link link6"
+      target="_blank"
+    >
+      CONTACT US
+      </a>
+
     <div class="footer__link link7">
       HomeShowerExpert.com © 2023. All Rights Reserved.
     </div>
