full-version_with_edits

--- a/src/pages/do_not_sell.html
+++ b/src/pages/do_not_sell.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="../styles/main.css">
 </head>
 
-<body>
+<body class="contact-sell">
   <header class="header">
     <div class="header__container">
       <div class="top-actions">
@@ -68,7 +68,7 @@
     <span id="sendText"></span>
   </form>
 
-  <footer class="footer">
+  <footer class="footer footer-contact">
     <a
       href="../pages/terms.html"
       class="footer__link link1"
